# minerva

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  docker-compose.yml
backend/: .env.dev  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3552a1daa5cc_identity_v1.py  8c2e4f1a0b3d_rule_base_table.py  947e36be8860_rules_v1.py  a1b2c3d4e5f6_rule_base_review_rules_ai.py  bbec5fe9111a_executions_v1.py  c3d4e5f6a7b8_rule_base_engineering_code.py  c4f8a91b2d10_remove_rules_and_executions.py  d4e5f6a7b8c9_rule_config_prompt_table.py  d91e4f2a8c00_sys_ocr_tool.py  f1e2d3c4b5a6_sys_ocr_tool_ocr_type_config.py  f8a2c9b01e77_sys_dict_fk_and_uniques.py
backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  errors.py  exceptions.py  limits.py  main.py  pagination.py
backend/app/api/: deps.py  router.py
backend/app/core/: __init__.py
backend/app/file_ocr/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/llm/: __init__.py
backend/app/ocr/: __init__.py
backend/app/rule/: __init__.py
backend/sql/: schema_postgresql.sql
backend/tests/: __init__.py  conftest.py  test_ai_api.py  test_auth.py  test_celery_beat_cron_schedule.py  test_celery_beat_sync.py  test_celery_jobs_api.py  test_db_session.py  test_dict_api.py  test_engine_smoke.py  test_error_envelope_and_limiter.py  test_file_ocr_api.py  test_flow_validate.py  test_health.py  test_llm.py  test_ocr_tools_api.py  test_rule_base_api.py  test_rule_config_prompt_api.py  test_rules.py  test_s3_file_api.py  test_scope_triple.py
(+312 files in other folders)
