[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "psycopg2-binary>=2.9",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "bcrypt>=4.2",
  "pyjwt>=2.9",
  "python-multipart>=0.0.17",
  "email-validator>=2.2",
  "slowapi>=0.1.9",
  "orjson>=3.10",
  "openai>=1.59",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "httpx>=0.28",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
